fix dark mode and date

--- a/my-portfolio/src/index.scss
+++ b/my-portfolio/src/index.scss
@@ -4,7 +4,6 @@ body {
   max-width: 100vw;
   font-size: $font-size-base;
   font-family: $font-family;
-  background-color: var(--background-color)
 }
 
 
