--- a/my-portfolio/src/pages/home/styles.scss
+++ b/my-portfolio/src/pages/home/styles.scss
@@ -1,5 +1,3 @@
 .home-page {
-  //scroll-snap-type: y mandatory;
-  //max-height: 100vh;
-  //overflow-y: scroll;
+  background-color: var(--background-color);
 }
